--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ mainmenukey: home
             <p class="smallprint">Maven/Ivy/Gradle</p>
         </a>
     </div>
-    <img src="img/ko-logo.png" />
+    <img src="img/twinkql-logo.png" />
 </div>
 <div class="clear vspace"></div>
 
