More resultMap docs.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ mainmenukey: home
         <p class="engraved">Get Twinkql now and simplify integration of a SPARQL datasource into your application</p>
         <a style="float:left" class="download-button" href="http://informatics.mayo.edu/maven/content/repositories/releases/edu/mayo/twinkql/0.3.0/twinkql-0.3.0.jar">
             <p>Download</p>
-            <p class="smallprint">v0.3.0</p>
+            <p class="smallprint">Zip (0.3.0.RELEASE)</p>
         </a>
-        <a style="float:left" class="download-button" href="documentation/installation.html#dependency">
-         	<p>Repository</p>
-            <p class="smallprint">Maven/Ivy/Gradle</p>
+        <a style="float:left" class="download-button" href="documentation/installation.html">
+         	<p>Maven</p>
+            <p class="smallprint">Depedency info</p>
         </a>
     </div>
     <img src="img/twinkql-logo.png" />
