Added new icons.

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@ mainmenukey: home
     </div>
     <ul id="introBadges">
         <li>    
-            <img src="img/feature-icons/declarative-bindings.png" />				
+            <img src="img/feature-icons/trash-icon.png" />				
             <p class="titillium heading">Result Bindings</p>
             <p>Easily bind SPARQL results to your Java Beans using XML Mappings</p>						
         </li>					
         <li>
-            <img src="img/feature-icons/automatic-refreshing.png" />					
+            <img src="img/feature-icons/reuse-icon.png" />					
             <p class="titillium heading">Reusability</p>
             <p>Extend and link results maps to fit your Java Bean hierarchy</p>						
         </li>
         <li>
-            <img src="img/feature-icons/dependency-tracking.png" />					
+            <img src="img/feature-icons/xml-icon.png" />					
             <p class="titillium heading">Dynamic SPARQL</p>
             <p>Need to build complex SPARQL on the fly? Twinkql can handle that</p>
         </li>
         <li>
-            <img src="img/feature-icons/templating.png" />					
+            <img src="img/feature-icons/clean-icon.png" />					
             <p class="titillium heading">Keep SPARQL out of your Code!</p>
-            <p>Keep your code clean -- Move your SPARQL out of your code and into XML</p>						
+            <p>Keep your Java code clean and healthy! Move your SPARQL out of your code and into XML</p>						
         </li>					
     </ul>
     <div class="clear"></div>
