Updated download links.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ mainmenukey: home
 <div id="masthead">
     <div id="slogan">
         <p class="engraved">Get Twinkql now and simplify integration of a SPARQL datasource into your application</p>
-        <a style="float:left" class="download-button" href="https://oss.sonatype.org/content/repositories/snapshots/org/twinkql/twinkql/0.9.0-SNAPSHOT/twinkql-0.9.0-20120628.191045-1-package.zip">
+        <a style="float:left" class="download-button" href="https://oss.sonatype.org/content/repositories/releases/org/twinkql/twinkql/{% include current-version.html %}/twinkql-{% include current-version.html %}-package.zip">
             <p>Download</p>
             <p class="smallprint">Zip (v{% include current-version.html %})</p>
         </a>
